# p2000t-tape-monitor

./: .gitignore  README.md
basicmod/: .gitignore  README.md  bootstrap.asm  compile.sh  hackrom.py  upload.py
cases/: p2000t-datacartridge-bottom.stl  p2000t-datacartridge-top.stl
cassette-utility/: Makefile  compile.sh  constants.h  copy.asm  copy.h  crc16.asm  crc16.h  leds.c  leds.h  main.c  main.map  main.rom  memory.c  memory.h  romchip.c  romchip.h  sst39sf.c  sst39sf.h  tape.asm  tape.h  terminal.c  util.c  util.h
copy-util/: Makefile  copy.h  main.c  memory.h  util.h
docs/: fat.md
firmwareflasher/: Makefile  README.md  config.h  constants.h  copy.asm  main.c  sst39sf.c  sst39sf.h  util.c
flasher/: Makefile  README.md  copy.h  leds.h  main.c  memory.c  sst39sf.c
gui/: CMakeLists.txt  README.md  installer.nsis  p2000t-fat.pro  resources.qrc
gui/assets/emulator/: P2000.cas  Tetris.cas.bak
gui/packaging/config/: config.xml
gui/src/: blockmap.cpp  blockmap.h  config.h  dialogslotselection.cpp  dialogslotselection.h  fatflashergui.cpp  fatflashergui.h  fileallocationtable.cpp  fileallocationtable.h  flashthread.cpp  flashthread.h  ioworker.cpp  ioworker.h  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  qhexview.cpp  qhexview.h  readthread.cpp  readthread.h  romsizes.h  serial_interface.cpp  serial_interface.h  syncthread.cpp  syncthread.h  threadrun.cpp  threadrun.h
img/: datacartridge_explainer.ai
launch-os/: Makefile  checksums.py  compile.sh  copyblock.asm  crc16.asm  disassembly.txt  main.c  memory.c  memory.h  programs.c  (+10 more)
(+62 files in other folders)
